--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,25 @@
-dataclasses==0.6
+awsebcli==3.15.3
+botocore==1.12.253
+cement==2.8.2
+certifi==2019.9.11
+chardet==3.0.4
+colorama==0.3.9
 Django==2.2.7
-django-cors-headers==3.1.1
-djangorestframework==3.10.3
-djongo==1.2.36
-dnspython==1.16.0
-pymongo==3.9.0
+docutils==0.15.2
+future==0.16.0
+idna==2.7
+jmespath==0.9.4
+pathspec==0.5.9
+pypiwin32==223
+python-dateutil==2.8.1
 pytz==2019.3
-sqlparse==0.2.4
+pywin32==226
+PyYAML==3.13
+requests==2.20.1
+semantic-version==2.5.0
+six==1.11.0
+sqlparse==0.3.0
+termcolor==1.1.0
+urllib3==1.24.3
+virtualenv==16.7.7
+wcwidth==0.1.7
