--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ djangorestframework==3.10.3
 djongo==1.2.36
 djoser==2.0.3
 dnspython==1.16.0
+gunicorn==20.0.4
 pymongo==3.9.0
+python-decouple==3.3
 pytz==2019.3
 sqlparse==0.2.4
+whitenoise==5.0.1
